--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -43,10 +43,11 @@ h1{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 15px;
 }
 
 p{
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .btn{
@@ -54,10 +55,17 @@ p{
   color: rgb(var(--darkBlue));
   font-weight: bold;
   border-radius: 12px;
-  padding: 15px 20px;
+  padding: 10px 15px;
   font-size: 16px;
   border: 3px solid rgb(var(--darkBlue));
   box-shadow: 5px 5px 15px -5px rgb(var(--darkBlue));
+  transition: all 0.3s ease-in-out;
+}
+
+.btn:hover{
+  font-size: 17px;
+  transform: scale(1.); /* Slight scale-up effect */
+  box-shadow: 7px 7px 20px -5px rgb(var(--darkBlue));
 }
 
 html,
